fix: sidebar collapse animation sync

--- a/src/styles/modules/side-bar.module.sass
+++ b/src/styles/modules/side-bar.module.sass
@@ -5,25 +5,11 @@
 
 $default-breakpoint: 'lg'
 
-@keyframes borderBottomRadiusChange
-  from
-    border-bottom-left-radius: 0px
-    border-bottom-right-radius: 0px
-  to
-    border-bottom-left-radius: 10px
-    border-bottom-right-radius: 10px
-
-@keyframes boxHeightChange
-  0%
-    height: 100%
-  30%
-    height: 75%
-  50%
-    height: 50%
-  80%
-    height: 25%
-  100%
-    height: 0px
+@mixin heightChangeAnimation( $duration: 400ms, $type: ease )
+  overflow-y: hidden
+  -webkit-transition: all $duration $type
+  -moz-transition: all $duration $type
+  transition: all $duration $type
 
 .wrapper
   overflow-y: scroll !important
@@ -61,6 +47,9 @@ $default-breakpoint: 'lg'
     @media screen and ( max-width: map.get( bs.$grid-breakpoints, $default-breakpoint ) )
       display: block
 
+.sideBarLogo
+  min-width: 12rem !important
+
 .sideBarSub
   margin-top: 32px
   margin-bottom: 1.5rem
@@ -81,15 +70,13 @@ $default-breakpoint: 'lg'
 
 .togglerButton
   @extend .shadow
+  @include sb_mixins.no-wrap-text
   text-align: left
   background-color: sb_colors.$dark-background-primary
   border-width: 0
   border-radius: 0px
   height: 50px
-  transition: all 0.2s
-  animation-name: borderBottomRadiusChange
-  animation-duration: 0.4s
-  @include sb_mixins.no-wrap-text
+  transition: all 450ms ease-in-out
   &:hover
     background: lighten(sb_colors.$dark-background-primary, 5%)
   &:focus
@@ -114,26 +101,28 @@ $default-breakpoint: 'lg'
     border-radius: 10px 10px 0px 0px
 
 .linksContainer
+  @include sb_mixins.no-wrap-text
+  @include heightChangeAnimation
   border-radius: 0px 0px 10px 10px
   background-color: sb_colors.$dark-gray
-  transition: all 0.2s
-  animation-name: boxHeightChange
-  animation-duration: 0.2s
-  padding-top: .5rem
-  padding-bottom: 1rem
   position: relative
-  z-index: 12
-  @include sb_mixins.no-wrap-text
-  ul
+  height: auto
+  & > ul
     @extend .simpleList
+    @include heightChangeAnimation(380ms, ease-out)
+    & > li
+      @include heightChangeAnimation(380ms, ease-out)
 
 .shown
-  height: 100%
+  padding-top: .5rem
+  padding-bottom: 1rem
+  height: fit-content
 
 .hidden
-  height: 0px
-  margin: 0px
-  padding: 0px
+  height: 0rem
+  padding-top: 0rem
+  padding-bottom: 0rem
+  margin: 0rem
 
 .sideBarLink
   color: sb_colors.$gray !important
@@ -142,7 +131,7 @@ $default-breakpoint: 'lg'
   font-weight: normal
   &:hover
     text-decoration: none
-    color: lighten(sb_colors.$gray, 5%) !important
+    color: sb_colors.$light-background-primary !important
     transition: all .2s
 
 .pureLink
@@ -158,19 +147,12 @@ $default-breakpoint: 'lg'
 
 .preFooterLinksWrapper
   @include sb_mixins.no-wrap-text
-  height: auto !important
-  overflow-y: hidden !important
-  @if map.has-key( bs.$grid-breakpoints, $default-breakpoint )
-    @media screen and ( max-width: map.get( bs.$grid-breakpoints, $default-breakpoint ) )
-      overflow-y: visible !important
-      display: block !important
+  overflow: visible !important
+  display: block
 
 .footer
   @include sb_mixins.no-wrap-text
-  // height: 25
+  overflow: visible !important
+  display: block
   background-color: #525252
   color: #C4C4C4
-  @if map.has-key( bs.$grid-breakpoints, $default-breakpoint )
-    @media screen and ( max-width: map.get( bs.$grid-breakpoints, $default-breakpoint ) )
-      overflow-y: visible !important
-      display: block !important
